--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+body {
+    background-image: url("../images/space.jpg")
+}
 .crys1 {
     float: left;
 }
@@ -15,11 +18,65 @@
 }
 .score {
     clear: both;
+    font-size: 30px;
+    background-color: lightsalmon;
+    width:300px;
+    height: 50px;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
 }
-h1 {
+.h1 {
  background-color: lightcoral;
- height:200px;
- width: 300px;
- font-size: 32px;
+ height:150px;
+ width: 400px;
+ font-size: 30px;
  font-weight: bold;
+ text-align: center;
+ border-style: solid;
+ border-color: black;
+ border-width: 4px;
+ 
+}
+.instructions {
+    background-color: lightblue;
+    width: 400px;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+}
+.random {
+    clear: both;
+    height: 100px;
+    width: 100px;
+    font-size: 30px;
+    background-color: lightgreen;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+}
+.totalscore {
+    font-size: 30px;
+    width:300px;
+    background-color: lightsalmon;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+
+}
+.winsloss {
+    background-color: lightgoldenrodyellow;
+    font-size: 24px;
+    width:145px;
+    float: left;
+    border-style: solid;
+    border-color: black;
+    border-width: 4px;
+}
+.margin {
+   
+        margin: auto;
+        width: 50%;
+        padding: 10px;
+    
 }
